// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getLines should return array of parsed lines 1`] = `
Array [
  Object {
    "tagName": "h2",
    "text": "Act 1",
  },
  Object {
    "tagName": "p",
    "text": "[Shot of Jack's eye opening, looking up at bamboo trees. Overhead shot panning out to show Jack is lying injured in a jungle. Jack sees a dog, slowly gets up, in pain. Finds a little liquor bottle in his pocket. Then he runs though the bamboo and emerges on a tropical beach. He sees plane wreckage and people running around, screaming, in distress. The engine is still spinning. Charlie gets dangerously close to it. Jin yells out in Korean.]",
  },
  Object {
    "tagName": "p",
    "text": "MICHAEL: Walt! Walt!",
  },
  Object {
    "tagName": "p",
    "text": "REDSHIRT: Stay away from the gas! Stay there!",
  },
  Object {
    "tagName": "p",
    "text": "[Shannon screaming. Jack looks up at the wing.]",
  },
  Object {
    "tagName": "p",
    "text": "REDSHIRT #2: [trapped under the piece with the still moving engine] Help! Help! Somebody help me! Help! Help! Ahh, my leg! Ah! Ah!",
  },
  Object {
    "tagName": "p",
    "text": "JACK: Hey you, just give me a hand! You, come on! Come over here, give me a hand! [A group of redshirts (and Locke) gather around to lift the metal piece that's trapping the man.] On the count of three: One, two, three.",
  },
  Object {
    "tagName": "p",
    "text": "[Jack pulls the man out from under. One leg is bloody. Jack starts ripping the man's pants to get to the wound. Jack uses his tie as a tourniquet.]",
  },
  Object {
    "tagName": "p",
    "text": "CLAIRE: Help! Please help me! Help me, please help me!",
  },
  Object {
    "tagName": "p",
    "text": "[Jack sees Claire, who is is pregnant and on her hands and knees.]",
  },
  Object {
    "tagName": "p",
    "text": "JACK: [to a redshirt and Locke] All right, get him out of here! Get him away from the engine! Get him out of here!",
  },
  Object {
    "tagName": "p",
    "text": "[He runs over to Claire through a lot of wreckage.]",
  },
  Object {
    "tagName": "p",
    "text": "CLAIRE: Help me, please. I'm having, I'm having contractions.",
  },
  Object {
    "tagName": "p",
    "text": "JACK: How many months pregnant are you?",
  },
  Object {
    "tagName": "p",
    "text": "CLAIRE: I'm, I'm nearly eight months.",
  },
  Object {
    "tagName": "p",
    "text": "[Jack looks over and sees Boone doing CPR on Rose.]",
  },
  Object {
    "tagName": "p",
    "text": "JACK: [to Claire] How far apart are they coming?",
  },
  Object {
    "tagName": "p",
    "text": "CLAIRE: I don't know, a-a few just happened.",
  },
  Object {
    "tagName": "p",
    "text": "[Shot of Locke and Redshirt carrying bad-leg-guy away. A man named Gary Troup starts walking in front of the engine and Locke sees him.]",
  },
  Object {
    "tagName": "p",
    "text": "LOCKE: Hey! Hey, hey, hey, get away from there!",
  },
  Object {
    "tagName": "p",
    "text": "GARY: What?",
  },
  Object {
    "tagName": "p",
    "text": "[Gary gets sucked into the engine and the engine explodes. Shot of people running. Jack sort of falls on top of Claire to protect her.]",
  },
  Object {
    "tagName": "p",
    "text": "JACK: Listen to me! Look at me! You're going to be okay, do you understand me? But you have to sit absolutely still!",
  },
  Object {
    "tagName": "p",
    "text": "[Jack looking at Boone giving Rose mouth-to-mouth.]",
  },
  Object {
    "tagName": "p",
    "text": "JACK: [to Hurley] Hey, you! Come here! I need you to get this woman away from these fumes! Take her over there. Stay with her. If her contractions occur any closer than three minutes apart, call out for me.",
  },
  Object {
    "tagName": "p",
    "text": "HURLEY: Oh, you got to be kidding me.",
  },
  Object {
    "tagName": "p",
    "text": "JACK: I'll be right back, okay?",
  },
  Object {
    "tagName": "p",
    "text": "CLAIRE: Thank you.",
  },
  Object {
    "tagName": "p",
    "text": "[Jack starts running off.]",
  },
  Object {
    "tagName": "p",
    "text": "HURLEY: Hey! What's your name?",
  },
  Object {
    "tagName": "p",
    "text": "JACK: Jack.",
  },
  Object {
    "tagName": "p",
    "text": "[Jack runs up to Boone and Rose.]",
  },
  Object {
    "tagName": "p",
    "text": "JACK: Stop! Her head's not tilted far back enough. You're blowing air into her stomach.",
  },
  Object {
    "tagName": "p",
    "text": "BOONE: You sure?",
  },
  Object {
    "tagName": "p",
    "text": "[Jack starts giving her mouth-to-mouth. ]",
  },
  Object {
    "tagName": "p",
    "text": "BOONE: That's exactly what I was doing. I'm a lifeguard. I'm licensed.",
  },
  Object {
    "tagName": "p",
    "text": "JACK: Yeah, well, you need to seriously think about giving that license back.",
  },
  Object {
    "tagName": "p",
    "text": "BOONE: Maybe we should do one of those hole things. You know, stick the pen in the throat?",
  },
  Object {
    "tagName": "p",
    "text": "JACK: Yeah, good idea. You go get me a pen.",
  },
  Object {
    "tagName": "p",
    "text": "[Boone runs off to get pens.]",
  },
  Object {
    "tagName": "p",
    "text": "JACK: [doing CPR] Come on. Come on! Come on! Come on!",
  },
  Object {
    "tagName": "p",
    "text": "[Rose breathes.]",
  },
  Object {
    "tagName": "p",
    "text": "JACK: Big deep breaths. Take breaths!",
  },
  Object {
    "tagName": "p",
    "text": "[Sound of metal. Jack looks up to see a big piece of metal high up (the wing) on some of the wreckage starting to wobble. Claire and Hurley are right under where it would fall. Jack runs over to them.]",
  },
  Object {
    "tagName": "p",
    "text": "JACK: [as he's running] Move! Move! Move! Get her up! Get her out of there! The wing!",
  },
  Object {
    "tagName": "p",
    "text": "[Jack, Hurley, and Claire run out of way as there is a huge explosion. A big piece of burning debris lands near Charlie.]",
  },
  Object {
    "tagName": "p",
    "text": "JACK: [to Claire] You okay?",
  },
  Object {
    "tagName": "p",
    "text": "CLAIRE: Yeah.",
  },
  Object {
    "tagName": "p",
    "text": "JACK: [to Hurley] You? [Hurley sort of nods lying on the ground]. Stay with her.",
  },
  Object {
    "tagName": "p",
    "text": "HURLEY: Dude, I'm not going anywhere.",
  },
  Object {
    "tagName": "p",
    "text": "[Jack sort of stumbling around the beach, looks into the fuselage. Takes a moment to steady himself, almost crying.]",
  },
  Object {
    "tagName": "p",
    "text": "BOONE: [walking up holding out a handful of pens] I didn't know which one would work best.",
  },
  Object {
    "tagName": "p",
    "text": "JACK: They're all good. Thanks.",
  },
  Object {
    "tagName": "hr",
    "text": "",
  },
  Object {
    "tagName": "p",
    "text": "[Shot of Jack going through a suitcase, and finding a sewing kit. Jack going to a deserted part of the beach and taking his jacket and shirt off. He has a big gash on his side. Kate comes walking by, doesn't know Jack is there. Kate rubbing her wrist.]",
  },
  Object {
    "tagName": "p",
    "text": "JACK: Excuse me. Did you ever use a needle?",
  },
  Object {
    "tagName": "p",
    "text": "KATE: What?",
  },
  Object {
    "tagName": "p",
    "text": "JACK: Did you ever … patch a pair of jeans?",
  },
  Object {
    "tagName": "p",
    "text": "KATE: I, uhm, I made the drapes in my apartment.",
  },
  Object {
    "tagName": "p",
    "text": "JACK: That's fantastic. Listen, do you have a second? I could use a little help here.",
  },
  Object {
    "tagName": "p",
    "text": "[Kate walks over to him.]",
  },
  Object {
    "tagName": "p",
    "text": "KATE: And with what?",
  },
  Object {
    "tagName": "p",
    "text": "JACK: With this.",
  },
  Object {
    "tagName": "p",
    "text": "[Jack shows her the wound, and she grimaces.]",
  },
  Object {
    "tagName": "p",
    "text": "JACK: Look, I'd do it myself, I'm a doctor, but I just can't reach it.",
  },
  Object {
    "tagName": "p",
    "text": "KATE: You want me to sew that up?",
  },
  Object {
    "tagName": "p",
    "text": "JACK: It's just like the drapes, same thing.",
  },
  Object {
    "tagName": "p",
    "text": "KATE: No, with the drapes I used a sewing machine.",
  },
  Object {
    "tagName": "p",
    "text": "JACK: No, you can do this. I'm telling you. If you wouldn't mind.",
  },
  Object {
    "tagName": "p",
    "text": "[Jack looks at her pleadingly.]",
  },
  Object {
    "tagName": "p",
    "text": "KATE: Of course I will.",
  },
  Object {
    "tagName": "p",
    "text": "JACK: Thank you. [handing her the little liquor bottle from his pocket] It's for your hands. Save me some for the, for the wound.",
  },
  Object {
    "tagName": "p",
    "text": "[Kate picks up a little sewing kit.]",
  },
  Object {
    "tagName": "p",
    "text": "KATE: Any color preference?",
  },
  Object {
    "tagName": "p",
    "text": "JACK: [laughing] No. Standard black.",
  },
  Object {
    "tagName": "p",
    "text": "[Jack dumps the vodka on his wound.]",
  },
  Object {
    "tagName": "hr",
    "text": "",
  },
  Object {
    "tagName": "p",
    "text": "[Shot of Sawyer lighting up a cigarette. Looking around. Then walking away, looks like he tosses his smoke down, disgusted-like; Claire standing by the shore; Hurley stacking airline food; Locke sitting alone looking out toward the ocean; Boone getting a \\"no service\\" signal on his cell phone.]",
  },
  Object {
    "tagName": "p",
    "text": "BOONE: Come on.",
  },
  Object {
    "tagName": "p",
    "text": "[Shot of Sayid adding wood to a big fire.]",
  },
  Object {
    "tagName": "p",
    "text": "SAYID: [to Charlie] Hey you. What's your name?",
  },
  Object {
    "tagName": "p",
    "text": "CHARLIE: Me? Charlie.",
  },
  Object {
    "tagName": "p",
    "text": "SAYID: Charlie. We need help with the fire. No-one will see it if it isn't big.",
  },
  Object {
    "tagName": "p",
    "text": "CHARLIE: Okay, I'm on it. What's your name?",
  },
  Object {
    "tagName": "p",
    "text": "SAYID: Sayid.",
  },
  Object {
    "tagName": "p",
    "text": "CHARLIE: Sayid. I'm on it, Sayid.",
  },
  Object {
    "tagName": "p",
    "text": "[Shot of Rose kissing the ring on her necklace]",
  },
  Object {
    "tagName": "hr",
    "text": "",
  },
  Object {
    "tagName": "p",
    "text": "[Kate sewing up Jack's wound.]",
  },
  Object {
    "tagName": "p",
    "text": "KATE: I might throw up on you.",
  },
  Object {
    "tagName": "p",
    "text": "JACK: [shaking his head] You're doing fine.",
  },
  Object {
    "tagName": "p",
    "text": "KATE: You don't seem afraid at all. I don't understand that.",
  },
  Object {
    "tagName": "p",
    "text": "JACK: Well, fear's sort of an odd thing. When I was in residency, my first solo procedure was a spinal surgery on a 16 year old kid, a girl. And at the end, after 13 hours, I was closing her up and I, I accidentally ripped her dural sac. Shredded the base of the spine where all the nerves come together, membrane as thin as tissue. And so it ripped open. And the nerves just spilled out of her like angel hair pasta, spinal fluid flowing out of her and I … And the terror was just so … crazy. So real. And I knew I had to deal with it. (He's crying). So I just made a choice. I'd let the fear in, let it take over, let it do its thing, but only for five seconds, that's all I was going to give it. So I started to count: One, two, three, four, five. Then it was gone. I went back to work, sewed her up and she was fine.",
  },
  Object {
    "tagName": "p",
    "text": "KATE: If that had been me, I think I would have run for the door.",
  },
  Object {
    "tagName": "p",
    "text": "JACK: No, I don't think that's true. You're not running now.",
  },
  Object {
    "tagName": "hr",
    "text": "",
  },
  Object {
    "tagName": "p",
    "text": "[Shot of stars in night sky; Charlie writing F.A.T.E. on his taped fingers, sitting next to Sayid.]",
  },
  Object {
    "tagName": "p",
    "text": "SAYID: You think they would have come by now.",
  },
  Object {
    "tagName": "p",
    "text": "CHARLIE: Huh? Who?",
  },
  Object {
    "tagName": "p",
    "text": "SAYID: Anyone.",
  },
  Object {
    "tagName": "p",
    "text": "[Shot of Shannon painting her toenails. Boone comes up, offers her a candy bar.]",
  },
  Object {
    "tagName": "p",
    "text": "SHANNON: As if I'm going to start eating chocolate.",
  },
  Object {
    "tagName": "p",
    "text": "BOONE: Shannon, we may be here for a while.",
  },
  Object {
    "tagName": "p",
    "text": "SHANNON: The plane had a black box, idiot. They know exactly where they are, they're coming. I'll eat on the rescue boat. [He offers the chocolate again]. I'll. Eat. On. The. Rescue. Boat. [Boone eats the chocolate.]",
  },
  Object {
    "tagName": "p",
    "text": "[Shot of Claire sitting on a piece of wreckage. Hurley comes up with a tray of airplane food.]",
  },
  Object {
    "tagName": "p",
    "text": "HURLEY: Hungry?",
  },
  Object {
    "tagName": "p",
    "text": "CLAIRE: Yeah, thanks.",
  },
  Object {
    "tagName": "p",
    "text": "HURLEY: Anymore, uh... you know, baby stuff?",
  },
  Object {
    "tagName": "p",
    "text": "CLAIRE: No. I'm-I'm okay.",
  },
  Object {
    "tagName": "p",
    "text": "HURLEY: Well, hang in there.",
  },
  Object {
    "tagName": "p",
    "text": "CLAIRE: Yeah, you too.",
  },
  Object {
    "tagName": "p",
    "text": "[Hurley's arm comes back into the shot and gives her another meal.]",
  },
  Object {
    "tagName": "p",
    "text": "[Close up of Michael]",
  },
  Object {
    "tagName": "p",
    "text": "MICHAEL: You sure you're warm enough?",
  },
  Object {
    "tagName": "p",
    "text": "[Shot of Walt lying on the beach under a blanket. He just nods, with a far-off look; shot of Jin and Sun.]",
  },
  Object {
    "tagName": "p",
    "text": "JIN: 내 옆에서 없어지면 안 돼. 내가 어디로 가든지 꼭 따라와. 알겠지? [Sun nods.] 다른 사람 신경쓰지 말고 우린 같이 있어야 돼. [Subtitle: You must not leave my sight. You must follow me wherever I go. Do you understand? Don't worry about the others. We need to stay together.]",
  },
  Object {
    "tagName": "p",
    "text": "[Shot of Kate standing over Jack while he's working on Marshal Mars, examining the Marshal's wound.]",
  },
  Object {
    "tagName": "p",
    "text": "KATE: Do you think he's going to live?",
  },
  Object {
    "tagName": "p",
    "text": "JACK: Do you know him?",
  },
  Object {
    "tagName": "p",
    "text": "KATE: He was sitting next to me.",
  },
  Object {
    "tagName": "hr",
    "text": "",
  },
  Object {
    "tagName": "p",
    "text": "[Shot of a leaf torn into the shape of an airplane.]",
  },
  Object {
    "tagName": "p",
    "text": "JACK: [off camera at first] We must have been at about 40,000 feet when it happened. Hit an air pocket. Dropped, maybe, 200 feet. The turbulence was … I blacked out.",
  },
  Object {
    "tagName": "p",
    "text": "KATE: I didn't. I saw the whole thing. I knew that the tail was gone, but I couldn't bring myself to look back. And then the, the front of the plane broke off.",
  },
  Object {
    "tagName": "p",
    "text": "JACK: Well, it's not here on the beach. Neither is the tail. We need to figure out which way we came in.",
  },
  Object {
    "tagName": "p",
    "text": "KATE: Why?",
  },
  Object {
    "tagName": "p",
    "text": "JACK: Because there's a chance we could find the cockpit. If it's intact, we might be able to find a transceiver. Send out a signal, help the rescue party find us.",
  },
  Object {
    "tagName": "p",
    "text": "KATE: How do you know all that?",
  },
  Object {
    "tagName": "p",
    "text": "JACK: Took a couple flying lessons. Wasn't for me.",
  },
  Object {
    "tagName": "p",
    "text": "KATE: I saw some smoke. Just through the valley. If you're thinking about going for the cockpit, I'm going with you.",
  },
  Object {
    "tagName": "p",
    "text": "JACK: I don't know your name.",
  },
  Object {
    "tagName": "p",
    "text": "KATE: I'm Kate.",
  },
  Object {
    "tagName": "p",
    "text": "JACK: Jack.",
  },
  Object {
    "tagName": "p",
    "text": "[Metal/weird sound coming from the jungle. Everyone on the beach is looking; Kate looks; Locke looks (the camera pans forward toward him for a close up); Walt looks; Shannon and Boone look.]",
  },
  Object {
    "tagName": "p",
    "text": "SHANNON: What was that?",
  },
  Object {
    "tagName": "p",
    "text": "[Kate looks back at Jack; Charlie and Sayid look.]",
  },
  Object {
    "tagName": "p",
    "text": "CHARLIE: That was weird, right?",
  },
  Object {
    "tagName": "p",
    "text": "WALT: Is that Vincent?",
  },
  Object {
    "tagName": "p",
    "text": "[Walt gets up and goes toward it.]",
  },
  Object {
    "tagName": "p",
    "text": "MICHAEL: [getting up to follow] It's not Vincent.",
  },
  Object {
    "tagName": "p",
    "text": "[Shot of trees moving/getting smashed down.]",
  },
  Object {
    "tagName": "p",
    "text": "CLAIRE: [coming into the frame] Did anybody see that?",
  },
  Object {
    "tagName": "p",
    "text": "HURLEY: [in disbelief] Yeah.",
  },
  Object {
    "tagName": "p",
    "text": "[Boone gets up, moves off.]",
  },
  Object {
    "tagName": "p",
    "text": "SHANNON: Boone!",
  },
  Object {
    "tagName": "p",
    "text": "[Everyone moving toward the sound, except Michael who backs off. Everyone looking out at the trees moving/getting smashed.]",
  },
  Object {
    "tagName": "p",
    "text": "CHARLIE: Terrific.",
  },
  Object {
    "tagName": "h2",
    "text": "Act 2",
  },
  Object {
    "tagName": "p",
    "text": "[Flashback - Shot out of airplane window over wing above clouds. Shot of Jack. Sound of cart rolling up.]",
  },
  Object {
    "tagName": "p",
    "text": "CINDY: So, how's the drink?",
  },
  Object {
    "tagName": "p",
    "text": "JACK: It's good.",
  },
  Object {
    "tagName": "p",
    "text": "CINDY: That wasn't a very strong reaction.",
  },
  Object {
    "tagName": "p",
    "text": "JACK: Well, it's not a very strong drink.",
  },
  Object {
    "tagName": "p",
    "text": "CINDY: [hands him two more bottles] Shhh. Just don't tell anyone.",
  },
  Object {
    "tagName": "p",
    "text": "JACK: This of course breaks some critical FAA regulations.",
  },
  Object {
    "tagName": "p",
    "text": "[Jack puts one of the bottles in his coat pocket and drinks the other. He stands up, then Charlie comes by him in the aisle.]",
  },
  Object {
    "tagName": "p",
    "text": "CHARLIE: Excuse me.",
  },
  Object {
    "tagName": "p",
    "text": "CINDY: [in background, to Charlie] Sir, excuse me!",
  },
  Object {
    "tagName": "p",
    "text": "ROSE: [looking at Charlie, then at Jack] Guess he really had to go.",
  },
  Object {
    "tagName": "p",
    "text": "[Two Flight Attendants run by.]",
  },
  Object {
    "tagName": "p",
    "text": "CINDY: Sir, excuse me!",
  },
  Object {
    "tagName": "p",
    "text": "[Jack sits back down. Then there is turbulence. Jack puts on his seatbelt.]",
  },
  Object {
    "tagName": "p",
    "text": "CINDY: [on the intercom] Ladies and gentleman, the pilot has switched on the \\"fasten seatbelt\\" sign. Please return to your seats and fasten your seatbelts.",
  },
  Object {
    "tagName": "p",
    "text": "JACK: [to Rose] It's normal.",
  },
  Object {
    "tagName": "p",
    "text": "ROSE: Oh, I know. I've just never been a very good flier. My husband keeps reminding me that planes want to be in the air.",
  },
  Object {
    "tagName": "p",
    "text": "JACK: Well, he sounds like a very smart man.",
  },
  Object {
    "tagName": "p",
    "text": "ROSE: Be sure and tell him that when he gets back from the bathroom.",
  },
  Object {
    "tagName": "p",
    "text": "[The plane is really shaking now.]",
  },
  Object {
    "tagName": "p",
    "text": "JACK: Well, I'll keep you company until he does. Don't worry it's going to be over...",
  },
  Object {
    "tagName": "p",
    "text": "[There's a sudden lurch and one passenger goes flying out of his seat and hits the ceiling. More shaking and screaming. The oxygen masks come down. Jack and Rose put their masks on. Shot of another guy putting his mask on.]",
  },
  Object {
    "tagName": "hr",
    "text": "",
  },
  Object {
    "tagName": "p",
    "text": "[On-Island - Shot of ocean, then Jack looking out at the ocean. Rose and a bunch of redshirts in the background.]",
  },
  Object {
    "tagName": "p",
    "text": "MICHAEL: It didn't sound like an animal. Not exactly, I mean.",
  },
  Object {
    "tagName": "p",
    "text": "ROSE: That sound that it made, I keep thinking that there was something really familiar about it.",
  },
  Object {
    "tagName": "p",
    "text": "SHANNON: Really? Where are you from?",
  },
  Object {
    "tagName": "p",
    "text": "ROSE: The Bronx.",
  },
  Object {
    "tagName": "p",
    "text": "CHARLIE: Might be monkeys. It's monkeys, right?",
  },
  Object {
    "tagName": "p",
    "text": "SAWYER: Sure it's monkeys. It's Monkey Island.",
  },
  Object {
    "tagName": "p",
    "text": "HURLEY: Technically, you know, we don't even know if we're on an island.",
  },
  Object {
    "tagName": "p",
    "text": "SAYID: We're on an Island.",
  },
  Object {
    "tagName": "p",
    "text": "KATE: [coming up behind Jack] You ready?",
  },
  Object {
    "tagName": "p",
    "text": "JACK: Kate, you showed me where the smoke was. I can get there myself.",
  },
  Object {
    "tagName": "p",
    "text": "KATE: I'm coming.",
  },
  Object {
    "tagName": "p",
    "text": "JACK: [smiling] Well, you're going to need better shoes.",
  },
  Object {
    "tagName": "p",
    "text": "[Shot of a dead body's feet. Kate reaches down to take hiking boots, checks the size. She looks at Locke, who's looking at her. He gives her the \\"orange\\" smile. He keeps eating the orange and looks away. She looks slightly freaked out/disgusted.]",
  },
  Object {
    "tagName": "hr",
    "text": "",
  },
  Object {
    "tagName": "p",
    "text": "[Shot of a group: Michael, Walt, Charlie, Sayid, Boone and Shannon, with Hurley approaching.]",
  },
  Object {
    "tagName": "p",
    "text": "MICHAEL: Whatever it was … it wasn't natural.",
  },
  Object {
    "tagName": "p",
    "text": "CHARLIE: Does anyone have any sun block?",
  },
  Object {
    "tagName": "p",
    "text": "SHANNON: Yeah, I do.",
  },
  Object {
    "tagName": "p",
    "text": "CHARLIE: Ah. Cool.",
  },
  Object {
    "tagName": "p",
    "text": "HURLEY: So, I was just looking inside the fuselage … It's pretty grim in there. You think we should do something about the, uh … [stopping and looking at Walt] b-o-d-y-s?",
  },
  Object {
    "tagName": "p",
    "text": "MICHAEL: What are you spelling, man? \\"Bodies\\"?",
  },
  Object {
    "tagName": "p",
    "text": "WALT: B-o-d-i-e-s.",
  },
  Object {
    "tagName": "p",
    "text": "SAYID: That sounds like a good idea.",
  },
  Object {
    "tagName": "p",
    "text": "SHANNON: No! They'll deal with it when they get here.",
  },
  Object {
    "tagName": "p",
    "text": "JACK: [entering] We go out and look for the cockpit. See if we can find a transceiver, to send a distress signal, help the rescue team. (To Boone) You're going to need to keep an eye on the wounded. If the guy in the suit wakes up, try to keep him calm, but don't let him remove that piece of shrapnel. You understand?",
  },
  Object {
    "tagName": "p",
    "text": "BOONE: Yeah, got it. What about the guy with the leg? The, the tourniquet.",
  },
  Object {
    "tagName": "p",
    "text": "JACK: I stopped the bleeding. I took it off last night. He … he should be all right.",
  },
  Object {
    "tagName": "p",
    "text": "BOONE: Yeah. Cool. Good job.",
  },
  Object {
    "tagName": "p",
    "text": "CHARLIE: I'll come with you. I want to help.",
  },
  Object {
    "tagName": "p",
    "text": "JACK: I don't need any more help.",
  },
  Object {
    "tagName": "p",
    "text": "CHARLIE: No, it's cool, I don't really feel like standing still, so. [Jack nods.] Excellent.",
  },
  Object {
    "tagName": "hr",
    "text": "",
  },
  Object {
    "tagName": "p",
    "text": "[Shot of valley looking out toward sea. You can see Jack, Charlie, and Kate in the distance coming toward camera.]",
  },
  Object {
    "tagName": "p",
    "text": "KATE: May I ask you something?",
  },
  Object {
    "tagName": "p",
    "text": "CHARLIE: Me? I'd be thrilled. I've been waiting.",
  },
  Object {
    "tagName": "p",
    "text": "KATE: Have we ever met, anywhere?",
  },
  Object {
    "tagName": "p",
    "text": "CHARLIE: No, that would be unlikely.",
  },
  Object {
    "tagName": "p",
    "text": "KATE: Hum.",
  },
  Object {
    "tagName": "p",
    "text": "CHARLIE: I look familiar, though, right?",
  },
  Object {
    "tagName": "p",
    "text": "KATE: Yeah.",
  },
  Object {
    "tagName": "p",
    "text": "CHARLIE: [Sighs.] Can't quite place it?",
  },
  Object {
    "tagName": "p",
    "text": "KATE: No, I can't.",
  },
  Object {
    "tagName": "p",
    "text": "CHARLIE: Yeah. I think I know.",
  },
  Object {
    "tagName": "p",
    "text": "KATE: You do?",
  },
  Object {
    "tagName": "p",
    "text": "CHARLIE: [singing] You all everybody … You all everybody! You've never heard that song?",
  },
  Object {
    "tagName": "p",
    "text": "KATE: I've heard it. I just don't know what the hell it is—",
  },
  Object {
    "tagName": "p",
    "text": "CHARLIE: That's us. Drive Shaft. Look, the ring—second tour of Finland. You've never heard of Drive Shaft?",
  },
  Object {
    "tagName": "p",
    "text": "KATE: [incredulous] The band?",
  },
  Object {
    "tagName": "p",
    "text": "CHARLIE: Yeah, the band.",
  },
  Object {
    "tagName": "p",
    "text": "KATE: You were in Drive Shaft.",
  },
  Object {
    "tagName": "p",
    "text": "CHARLIE: I am in Drive Shaft. I play bass.",
  },
  Object {
    "tagName": "p",
    "text": "KATE: Seriously?",
  },
  Object {
    "tagName": "p",
    "text": "CHARLIE: Yeah, Charlie. Track 3, you know, I do backing vocals.",
  },
  Object {
    "tagName": "p",
    "text": "KATE: My friend Beth would freak. She loved you guys.",
  },
  Object {
    "tagName": "p",
    "text": "CHARLIE: Give me Beth's number, I'll call her, I'd, I'd love to.",
  },
  Object {
    "tagName": "p",
    "text": "JACK: Hey—",
  },
  Object {
    "tagName": "p",
    "text": "CHARLIE: Does she live nearby?",
  },
  Object {
    "tagName": "p",
    "text": "KATE: Have you ever heard of Drive Shaft?",
  },
  Object {
    "tagName": "p",
    "text": "CHARLIE: [singing] You all everybody... You all every...body.",
  },
  Object {
    "tagName": "p",
    "text": "JACK: [shakes his head] We've got to keep moving.",
  },
  Object {
    "tagName": "p",
    "text": "KATE: They were good.",
  },
  Object {
    "tagName": "p",
    "text": "CHARLIE: They are good. We're still together. In the middle of a comeback.",
  },
  Object {
    "tagName": "p",
    "text": "[Camera pans down to reveal Vincent]",
  },
  Object {
    "tagName": "hr",
    "text": "",
  },
  Object {
    "tagName": "p",
    "text": "[Shot of Locke alone on the beach looking out to sea; we see clouds forming, sound of thunder. Shot of Kate, Charlie, Jack in the jungle in the rain.]",
  },
  Object {
    "tagName": "p",
    "text": "CHARLIE: Hey guys, is this normal? Kind of ... day turning into night, you know? End of the world type weather. Is this—guys?",
  },
  Object {
    "tagName": "p",
    "text": "[Shot of Locke sitting on the beach with people running around to get out of the rain. Locke just sits there. Jin kicks a guy out from Jin and Sun's little overhang of debris; Hurley runs past Boone and Shannon who are racing to get inside the fuselage.]",
  },
  Object {
    "tagName": "p",
    "text": "HURLEY: I don't know if you want to go in there! There's too many bodies.",
  },
  Object {
    "tagName": "p",
    "text": "[Shot of Michael holding something up (some kind of tarp?) under some debris, puts his arm on Walt's shoulder. Shot of Locke alone on the beach in a sort of meditation pose (music is sort of bittersweet). Locke holds his arms out, turns his face up to the rain, seems happy; we see the Monster in the jungle by the beach. Claire and Rose see it.]",
  },
  Object {
    "tagName": "p",
    "text": "CLAIRE: There it is again.",
  },
  Object {
    "tagName": "p",
    "text": "ROSE: Oh my god.",
  },
  Object {
    "tagName": "hr",
    "text": "",
  },
  Object {
    "tagName": "p",
    "text": "[Shot of Jack, Kate, Charlie coming upon the cockpit. They all look a bit scared.]",
  },
  Object {
    "tagName": "p",
    "text": "JACK: Well? Let's do this.",
  },
  Object {
    "tagName": "h2",
    "text": "Act 3",
  },
  Object {
    "tagName": "p",
    "text": "[Shot of Jack, Kate, and Charlie making their way to the cockpit wreckage.]",
  },
  Object {
    "tagName": "p",
    "text": "CHARLIE: Let's get this trans…",
  },
  Object {
    "tagName": "p",
    "text": "JACK: Transceiver.",
  },
  Object {
    "tagName": "p",
    "text": "CHARLIE: Transceiver thing and get out of here.",
  },
  Object {
    "tagName": "p",
    "text": "[We see them climbing up, through the front of the plane. There are dead bodies. Jack can't open the cockpit door, bangs on it with a fire extinguisher.]",
  },
  Object {
    "tagName": "p",
    "text": "JACK: Come on! Come...",
  },
  Object {
    "tagName": "p",
    "text": "[The door opens and a body comes falling out.]",
  },
  Object {
    "tagName": "p",
    "text": "JACK: [to Kate] You okay?",
  },
  Object {
    "tagName": "p",
    "text": "KATE: Yeah. You?",
  },
  Object {
    "tagName": "p",
    "text": "JACK: Yeah.",
  },
  Object {
    "tagName": "p",
    "text": "CHARLIE: I'm fine. Charlie's fine, by the way. Okay?",
  },
  Object {
    "tagName": "p",
    "text": "JACK: [to Kate] Hey. You don't have to come up here.",
  },
  Object {
    "tagName": "p",
    "text": "KATE: No, I'm good.",
  },
  Object {
    "tagName": "p",
    "text": "[Kate and Jack get inside the cockpit.]",
  },
  Object {
    "tagName": "p",
    "text": "KATE: So, what does a transceiver look like?",
  },
  Object {
    "tagName": "p",
    "text": "JACK: Complicated walkie-talkie.",
  },
  Object {
    "tagName": "p",
    "text": "[Kate climbs over the pilot looking for the transceiver when suddenly the pilot takes a breath. Jack and Kate are shocked.]",
  },
  Object {
    "tagName": "p",
    "text": "JACK: Hey! Can you hear me? [to Kate] I need that water. [He gives the pilot some water] Here. Here you go. Hey.",
  },
  Object {
    "tagName": "p",
    "text": "PILOT: How many survived?",
  },
  Object {
    "tagName": "p",
    "text": "JACK: At least 48. Does anything feel broken?",
  },
  Object {
    "tagName": "p",
    "text": "PILOT: No, no. Just my head's a little dizzy, that's all.",
  },
  Object {
    "tagName": "p",
    "text": "JACK: Yeah. It's probably a concussion.",
  },
  Object {
    "tagName": "p",
    "text": "PILOT: How long has it been?",
  },
  Object {
    "tagName": "p",
    "text": "JACK: Sixteen hours.",
  },
  Object {
    "tagName": "p",
    "text": "PILOT: Sixteen? Has anybody come?",
  },
  Object {
    "tagName": "p",
    "text": "JACK: Not yet.",
  },
  Object {
    "tagName": "p",
    "text": "PILOT: Six hours in, our radio went out. No-one could see us. We turned back to land in Fiji. By the time we hit turbulence, we … we were a thousand miles off course. They're looking for us in the wrong place.",
  },
  Object {
    "tagName": "p",
    "text": "PILOT: We have a transceiver.",
  },
  Object {
    "tagName": "p",
    "text": "[The pilot moves to go get it.]",
  },
  Object {
    "tagName": "p",
    "text": "JACK: Good. Good, that's what we were hoping. Listen, you shouldn't try to move.",
  },
  Object {
    "tagName": "p",
    "text": "PILOT: No, no. I'm okay. It's okay. Transceiver's right there. It's right there.",
  },
  Object {
    "tagName": "p",
    "text": "[Kate gets it and hands it to the pilot.]",
  },
  Object {
    "tagName": "p",
    "text": "JACK: [to Kate] Where's Charlie?",
  },
  Object {
    "tagName": "p",
    "text": "[Kate goes to look for Charlie. The pilot is fiddling with the transceiver.]",
  },
  Object {
    "tagName": "p",
    "text": "PILOT: It's not working.",
  },
  Object {
    "tagName": "p",
    "text": "KATE: [going through cabin, seeing two dead bodies] Charlie?",
  },
  Object {
    "tagName": "p",
    "text": "[Charlie comes out of the bathroom.]",
  },
  Object {
    "tagName": "p",
    "text": "KATE: What were you doing in the bathroom?",
  },
  Object {
    "tagName": "p",
    "text": "CHARLIE: What?",
  },
  Object {
    "tagName": "p",
    "text": "[The plane starts shaking. We hear the monster sounds. Shot of Kate and Charlie, Pilot and Jack reacting.]",
  },
  Object {
    "tagName": "p",
    "text": "PILOT: What the hell was that?",
  },
  Object {
    "tagName": "p",
    "text": "JACK: Kate.",
  },
  Object {
    "tagName": "p",
    "text": "[Shot of Kate going back into Cockpit with Charlie's help.]",
  },
  Object {
    "tagName": "p",
    "text": "KATE: It's right outside.",
  },
  Object {
    "tagName": "p",
    "text": "PILOT: What, what's right outside?",
  },
  Object {
    "tagName": "p",
    "text": "JACK: Shhhh.",
  },
  Object {
    "tagName": "p",
    "text": "[Kate looks terrified. We see the shadow of the monster going past window. Jack tries to look out the window to see it. The pilot goes up to try and see it. Briefly hesitating, he first puts the transceiver on the co-pilot's seat, then climbs part way out of an opening above. Charlie comes into the cockpit. The pilot gets snatched out of a broken window. There's blood all over the window.]",
  },
  Object {
    "tagName": "p",
    "text": "CHARLIE: What the hell just happened?",
  },
  Object {
    "tagName": "p",
    "text": "[Big crashing and shaking. Jack reaches for the transceiver just before it falls. The cockpit falls to the ground from its inclined position. Jack is reaching for the transceiver.]",
  },
  Object {
    "tagName": "p",
    "text": "KATE: Jack, come on!",
  },
  Object {
    "tagName": "p",
    "text": "CHARLIE: Just leave it!",
  },
  Object {
    "tagName": "p",
    "text": "[Jack grabs it. They run. Monster sounds, running, anxious music. Charlie falls. His leg is trapped in some vines.]",
  },
  Object {
    "tagName": "p",
    "text": "CHARLIE: [shouts] Hey!",
  },
  Object {
    "tagName": "p",
    "text": "[Jack goes back to rescue him.]",
  },
  Object {
    "tagName": "p",
    "text": "JACK: Okay, let's run.",
  },
  Object {
    "tagName": "p",
    "text": "[Kate keeps running and ends up alone.]",
  },
  Object {
    "tagName": "p",
    "text": "KATE: [terrified] J-J-J... Jaaaack! [Big door slamming sound/big footstep sounds. Kate is trying to compose herself] One! Two! Three! Four! Five!",
  },
  Object {
    "tagName": "h2",
    "text": "Act 4",
  },
  Object {
    "tagName": "p",
    "text": "[Shot of Kate, she hears something and looks off. Charlie comes up behind her, she turns to find him and knocks him down.]",
  },
  Object {
    "tagName": "p",
    "text": "CHARLIE: Kate!",
  },
  Object {
    "tagName": "p",
    "text": "KATE: Where the hell is Jack?",
  },
  Object {
    "tagName": "p",
    "text": "CHARLIE: I don't know!",
  },
  Object {
    "tagName": "p",
    "text": "KATE: Did you see him?",
  },
  Object {
    "tagName": "p",
    "text": "CHARLIE: Yeah, he pulled me up!",
  },
  Object {
    "tagName": "p",
    "text": "KATE: Where is he?",
  },
  Object {
    "tagName": "p",
    "text": "CHARLIE: I don't know!",
  },
  Object {
    "tagName": "p",
    "text": "KATE: How can you not know?",
  },
  Object {
    "tagName": "p",
    "text": "CHARLIE: We got separated! Look, I … I fell down, and he, he came back for me, that thing was just…",
  },
  Object {
    "tagName": "p",
    "text": "KATE: Did you see it?",
  },
  Object {
    "tagName": "p",
    "text": "CHARLIE: No. No! But it was right there. We were dead! I was. An-And then Jack came back, and he, he pulled me up. I don't know where he is.",
  },
  Object {
    "tagName": "p",
    "text": "[Kate looks around.]",
  },
  Object {
    "tagName": "p",
    "text": "KATE: We have to go back for him.",
  },
  Object {
    "tagName": "p",
    "text": "CHARLIE: Go back? There? Kate, there's a certain gargantuan quality about this thing.",
  },
  Object {
    "tagName": "p",
    "text": "KATE: Then don't come.",
  },
  Object {
    "tagName": "p",
    "text": "[Kate walks off, Charlie gets up to follow (reluctantly).]",
  },
  Object {
    "tagName": "p",
    "text": "CHARLIE: Kate!",
  },
  Object {
    "tagName": "hr",
    "text": "",
  },
  Object {
    "tagName": "p",
    "text": "[Shot of jungle. Kate and Charlie walking around.]",
  },
  Object {
    "tagName": "p",
    "text": "CHARLIE: I heard you shout. I heard you shout \\"Jack\\". I'm Charlie, by the way.",
  },
  Object {
    "tagName": "p",
    "text": "[Kate sees something.]",
  },
  Object {
    "tagName": "p",
    "text": "CHARLIE: What is that?",
  },
  Object {
    "tagName": "p",
    "text": "[Kate picks up pilot's wings from the muddy ground. Shot shifts focus from wings to the reflection in the water where they see the pilot's body in the tree above them.]",
  },
  Object {
    "tagName": "p",
    "text": "CHARLIE: What is...",
  },
  Object {
    "tagName": "p",
    "text": "JACK: [approaching] It's the pilot.",
  },
  Object {
    "tagName": "p",
    "text": "KATE: Did you see it?",
  },
  Object {
    "tagName": "p",
    "text": "JACK: No. It was right behind me, but... I dove into the bushes.",
  },
  Object {
    "tagName": "p",
    "text": "CHARLIE: [pointing up to the pilot in the tree] Guys? How does something like that happen?",
  },
  Object {
    "tagName": "p",
    "text": "[Shot of bloody pilot in the treetop, bloody and with face-skin torn off, but not eaten.]",
  },
]
`;

exports[`parseIndex should return list of seasons and episodes 1`] = `
Array [
  Array [
    Object {
      "title": "Pilot, Part 1",
      "url": "http://lostpedia.wikia.com/wiki/Pilot,_Part_1_transcript",
    },
    Object {
      "title": "Pilot, Part 2",
      "url": "http://lostpedia.wikia.com/wiki/Pilot,_Part_2_transcript",
    },
    Object {
      "title": "Tabula Rasa",
      "url": "http://lostpedia.wikia.com/wiki/Tabula_Rasa_transcript",
    },
    Object {
      "title": "Walkabout",
      "url": "http://lostpedia.wikia.com/wiki/Walkabout_transcript",
    },
    Object {
      "title": "White Rabbit",
      "url": "http://lostpedia.wikia.com/wiki/White_Rabbit_transcript",
    },
    Object {
      "title": "House of the Rising Sun",
      "url": "http://lostpedia.wikia.com/wiki/House_of_the_Rising_Sun_transcript",
    },
    Object {
      "title": "The Moth",
      "url": "http://lostpedia.wikia.com/wiki/The_Moth_transcript",
    },
    Object {
      "title": "Confidence Man",
      "url": "http://lostpedia.wikia.com/wiki/Confidence_Man_transcript",
    },
    Object {
      "title": "Solitary",
      "url": "http://lostpedia.wikia.com/wiki/Solitary_transcript",
    },
    Object {
      "title": "Raised by Another",
      "url": "http://lostpedia.wikia.com/wiki/Raised_by_Another_transcript",
    },
    Object {
      "title": "All the Best Cowboys Have Daddy Issues",
      "url": "http://lostpedia.wikia.com/wiki/All_the_Best_Cowboys_Have_Daddy_Issues_transcript",
    },
    Object {
      "title": "Whatever the Case May Be",
      "url": "http://lostpedia.wikia.com/wiki/Whatever_the_Case_May_Be_transcript",
    },
    Object {
      "title": "Hearts and Minds",
      "url": "http://lostpedia.wikia.com/wiki/Hearts_and_Minds_transcript",
    },
    Object {
      "title": "Special",
      "url": "http://lostpedia.wikia.com/wiki/Special_transcript",
    },
    Object {
      "title": "Homecoming",
      "url": "http://lostpedia.wikia.com/wiki/Homecoming_transcript",
    },
    Object {
      "title": "Outlaws",
      "url": "http://lostpedia.wikia.com/wiki/Outlaws_transcript",
    },
    Object {
      "title": "...In Translation",
      "url": "http://lostpedia.wikia.com/wiki/...In_Translation_transcript",
    },
    Object {
      "title": "Numbers",
      "url": "http://lostpedia.wikia.com/wiki/Numbers_transcript",
    },
    Object {
      "title": "Deus Ex Machina",
      "url": "http://lostpedia.wikia.com/wiki/Deus_Ex_Machina_transcript",
    },
    Object {
      "title": "Do No Harm",
      "url": "http://lostpedia.wikia.com/wiki/Do_No_Harm_transcript",
    },
    Object {
      "title": "The Greater Good",
      "url": "http://lostpedia.wikia.com/wiki/The_Greater_Good_transcript",
    },
    Object {
      "title": "Born to Run",
      "url": "http://lostpedia.wikia.com/wiki/Born_to_Run_transcript",
    },
    Object {
      "title": "Exodus, Part 1",
      "url": "http://lostpedia.wikia.com/wiki/Exodus,_Part_1_transcript",
    },
    Object {
      "title": "Exodus, Part 2",
      "url": "http://lostpedia.wikia.com/wiki/Exodus,_Part_2_transcript",
    },
  ],
  Array [
    Object {
      "title": "Man of Science, Man of Faith",
      "url": "http://lostpedia.wikia.com/wiki/Man_of_Science,_Man_of_Faith_transcript",
    },
    Object {
      "title": "Adrift",
      "url": "http://lostpedia.wikia.com/wiki/Adrift_transcript",
    },
    Object {
      "title": "Orientation",
      "url": "http://lostpedia.wikia.com/wiki/Orientation_transcript",
    },
    Object {
      "title": "Everybody Hates Hugo",
      "url": "http://lostpedia.wikia.com/wiki/Everybody_Hates_Hugo_transcript",
    },
    Object {
      "title": "...And Found",
      "url": "http://lostpedia.wikia.com/wiki/...And_Found_transcript",
    },
    Object {
      "title": "Abandoned",
      "url": "http://lostpedia.wikia.com/wiki/Abandoned_transcript",
    },
    Object {
      "title": "The Other 48 Days",
      "url": "http://lostpedia.wikia.com/wiki/The_Other_48_Days_transcript",
    },
    Object {
      "title": "Collision",
      "url": "http://lostpedia.wikia.com/wiki/Collision_transcript",
    },
    Object {
      "title": "What Kate Did",
      "url": "http://lostpedia.wikia.com/wiki/What_Kate_Did_transcript",
    },
    Object {
      "title": "The 23rd Psalm",
      "url": "http://lostpedia.wikia.com/wiki/The_23rd_Psalm_transcript",
    },
    Object {
      "title": "The Hunting Party",
      "url": "http://lostpedia.wikia.com/wiki/The_Hunting_Party_transcript",
    },
    Object {
      "title": "Fire + Water",
      "url": "http://lostpedia.wikia.com/wiki/Fire_%2B_Water_transcript",
    },
    Object {
      "title": "The Long Con",
      "url": "http://lostpedia.wikia.com/wiki/The_Long_Con_transcript",
    },
    Object {
      "title": "One of Them",
      "url": "http://lostpedia.wikia.com/wiki/One_of_Them_transcript",
    },
    Object {
      "title": "Maternity Leave",
      "url": "http://lostpedia.wikia.com/wiki/Maternity_Leave_transcript",
    },
    Object {
      "title": "The Whole Truth",
      "url": "http://lostpedia.wikia.com/wiki/The_Whole_Truth_transcript",
    },
    Object {
      "title": "Lockdown",
      "url": "http://lostpedia.wikia.com/wiki/Lockdown_transcript",
    },
    Object {
      "title": "Dave",
      "url": "http://lostpedia.wikia.com/wiki/Dave_transcript",
    },
    Object {
      "title": "S.O.S.",
      "url": "http://lostpedia.wikia.com/wiki/S.O.S._transcript",
    },
    Object {
      "title": "Two for the Road",
      "url": "http://lostpedia.wikia.com/wiki/Two_for_the_Road_transcript",
    },
    Object {
      "title": "?",
      "url": "http://lostpedia.wikia.com/wiki/%3F_transcript",
    },
    Object {
      "title": "Three Minutes",
      "url": "http://lostpedia.wikia.com/wiki/Three_Minutes_transcript",
    },
    Object {
      "title": "Live Together, Die Alone",
      "url": "http://lostpedia.wikia.com/wiki/Live_Together,_Die_Alone_transcript",
    },
  ],
  Array [
    Object {
      "title": "A Tale of Two Cities",
      "url": "http://lostpedia.wikia.com/wiki/A_Tale_of_Two_Cities_transcript",
    },
    Object {
      "title": "The Glass Ballerina",
      "url": "http://lostpedia.wikia.com/wiki/The_Glass_Ballerina_transcript",
    },
    Object {
      "title": "Further Instructions",
      "url": "http://lostpedia.wikia.com/wiki/Further_Instructions_transcript",
    },
    Object {
      "title": "Every Man for Himself",
      "url": "http://lostpedia.wikia.com/wiki/Every_Man_for_Himself_transcript",
    },
    Object {
      "title": "The Cost of Living",
      "url": "http://lostpedia.wikia.com/wiki/The_Cost_of_Living_transcript",
    },
    Object {
      "title": "I Do",
      "url": "http://lostpedia.wikia.com/wiki/I_Do_transcript",
    },
    Object {
      "title": "Not in Portland",
      "url": "http://lostpedia.wikia.com/wiki/Not_in_Portland_transcript",
    },
    Object {
      "title": "Flashes Before Your Eyes",
      "url": "http://lostpedia.wikia.com/wiki/Flashes_Before_Your_Eyes_transcript",
    },
    Object {
      "title": "Stranger in a Strange Land",
      "url": "http://lostpedia.wikia.com/wiki/Stranger_in_a_Strange_Land_transcript",
    },
    Object {
      "title": "Tricia Tanaka Is Dead",
      "url": "http://lostpedia.wikia.com/wiki/Tricia_Tanaka_Is_Dead_transcript",
    },
    Object {
      "title": "Enter 77",
      "url": "http://lostpedia.wikia.com/wiki/Enter_77_transcript",
    },
    Object {
      "title": "Par Avion",
      "url": "http://lostpedia.wikia.com/wiki/Par_Avion_transcript",
    },
    Object {
      "title": "The Man from Tallahassee",
      "url": "http://lostpedia.wikia.com/wiki/The_Man_from_Tallahassee_transcript",
    },
    Object {
      "title": "Exposé",
      "url": "http://lostpedia.wikia.com/wiki/Expos%C3%A9_transcript",
    },
    Object {
      "title": "Left Behind",
      "url": "http://lostpedia.wikia.com/wiki/Left_Behind_transcript",
    },
    Object {
      "title": "One of Us",
      "url": "http://lostpedia.wikia.com/wiki/One_of_Us_transcript",
    },
    Object {
      "title": "Catch-22",
      "url": "http://lostpedia.wikia.com/wiki/Catch-22_transcript",
    },
    Object {
      "title": "D.O.C.",
      "url": "http://lostpedia.wikia.com/wiki/D.O.C._transcript",
    },
    Object {
      "title": "The Brig",
      "url": "http://lostpedia.wikia.com/wiki/The_Brig_transcript",
    },
    Object {
      "title": "The Man Behind the Curtain",
      "url": "http://lostpedia.wikia.com/wiki/The_Man_Behind_the_Curtain_transcript",
    },
    Object {
      "title": "Greatest Hits",
      "url": "http://lostpedia.wikia.com/wiki/Greatest_Hits_transcript",
    },
    Object {
      "title": "Through the Looking Glass",
      "url": "http://lostpedia.wikia.com/wiki/Through_the_Looking_Glass_transcript",
    },
  ],
  Array [
    Object {
      "title": "The Beginning of the End",
      "url": "http://lostpedia.wikia.com/wiki/The_Beginning_of_the_End_transcript",
    },
    Object {
      "title": "Confirmed Dead",
      "url": "http://lostpedia.wikia.com/wiki/Confirmed_Dead_transcript",
    },
    Object {
      "title": "The Economist",
      "url": "http://lostpedia.wikia.com/wiki/The_Economist_transcript",
    },
    Object {
      "title": "Eggtown",
      "url": "http://lostpedia.wikia.com/wiki/Eggtown_transcript",
    },
    Object {
      "title": "The Constant",
      "url": "http://lostpedia.wikia.com/wiki/The_Constant_transcript",
    },
    Object {
      "title": "The Other Woman",
      "url": "http://lostpedia.wikia.com/wiki/The_Other_Woman_transcript",
    },
    Object {
      "title": "Ji Yeon",
      "url": "http://lostpedia.wikia.com/wiki/Ji_Yeon_transcript",
    },
    Object {
      "title": "Meet Kevin Johnson",
      "url": "http://lostpedia.wikia.com/wiki/Meet_Kevin_Johnson_transcript",
    },
    Object {
      "title": "The Shape of Things to Come",
      "url": "http://lostpedia.wikia.com/wiki/The_Shape_of_Things_to_Come_transcript",
    },
    Object {
      "title": "Something Nice Back Home",
      "url": "http://lostpedia.wikia.com/wiki/Something_Nice_Back_Home_transcript",
    },
    Object {
      "title": "Cabin Fever",
      "url": "http://lostpedia.wikia.com/wiki/Cabin_Fever_transcript",
    },
    Object {
      "title": "There's No Place Like Home, Part 1",
      "url": "http://lostpedia.wikia.com/wiki/There%27s_No_Place_Like_Home,_Part_1_transcript",
    },
    Object {
      "title": "There's No Place Like Home, Parts 2 & 3",
      "url": "http://lostpedia.wikia.com/wiki/There%27s_No_Place_Like_Home,_Parts_2_%26_3_transcript",
    },
  ],
  Array [
    Object {
      "title": "Because You Left",
      "url": "http://lostpedia.wikia.com/wiki/Because_You_Left_transcript",
    },
    Object {
      "title": "The Lie",
      "url": "http://lostpedia.wikia.com/wiki/The_Lie_transcript",
    },
    Object {
      "title": "Jughead",
      "url": "http://lostpedia.wikia.com/wiki/Jughead_transcript",
    },
    Object {
      "title": "The Little Prince",
      "url": "http://lostpedia.wikia.com/wiki/The_Little_Prince_transcript",
    },
    Object {
      "title": "This Place Is Death",
      "url": "http://lostpedia.wikia.com/wiki/This_Place_Is_Death_transcript",
    },
    Object {
      "title": "316",
      "url": "http://lostpedia.wikia.com/wiki/316_transcript",
    },
    Object {
      "title": "The Life and Death of Jeremy Bentham",
      "url": "http://lostpedia.wikia.com/wiki/The_Life_and_Death_of_Jeremy_Bentham_transcript",
    },
    Object {
      "title": "LaFleur",
      "url": "http://lostpedia.wikia.com/wiki/LaFleur_transcript",
    },
    Object {
      "title": "Namaste",
      "url": "http://lostpedia.wikia.com/wiki/Namaste_transcript",
    },
    Object {
      "title": "He's Our You",
      "url": "http://lostpedia.wikia.com/wiki/He%27s_Our_You_transcript",
    },
    Object {
      "title": "Whatever Happened, Happened",
      "url": "http://lostpedia.wikia.com/wiki/Whatever_Happened,_Happened_transcript",
    },
    Object {
      "title": "Dead Is Dead",
      "url": "http://lostpedia.wikia.com/wiki/Dead_Is_Dead_transcript",
    },
    Object {
      "title": "Some Like It Hoth",
      "url": "http://lostpedia.wikia.com/wiki/Some_Like_It_Hoth_transcript",
    },
    Object {
      "title": "The Variable",
      "url": "http://lostpedia.wikia.com/wiki/The_Variable_transcript",
    },
    Object {
      "title": "Follow the Leader",
      "url": "http://lostpedia.wikia.com/wiki/Follow_the_Leader_transcript",
    },
    Object {
      "title": "The Incident, Parts 1 & 2",
      "url": "http://lostpedia.wikia.com/wiki/The_Incident,_Parts_1_%26_2_transcript",
    },
  ],
  Array [
    Object {
      "title": "LA X, Parts 1 & 2",
      "url": "http://lostpedia.wikia.com/wiki/LA_X,_Parts_1_%26_2_transcript",
    },
    Object {
      "title": "What Kate Does",
      "url": "http://lostpedia.wikia.com/wiki/What_Kate_Does_transcript",
    },
    Object {
      "title": "The Substitute",
      "url": "http://lostpedia.wikia.com/wiki/The_Substitute_transcript",
    },
    Object {
      "title": "Lighthouse",
      "url": "http://lostpedia.wikia.com/wiki/Lighthouse_transcript",
    },
    Object {
      "title": "Sundown",
      "url": "http://lostpedia.wikia.com/wiki/Sundown_transcript",
    },
    Object {
      "title": "Dr. Linus",
      "url": "http://lostpedia.wikia.com/wiki/Dr._Linus_transcript",
    },
    Object {
      "title": "Recon",
      "url": "http://lostpedia.wikia.com/wiki/Recon_transcript",
    },
    Object {
      "title": "Ab Aeterno",
      "url": "http://lostpedia.wikia.com/wiki/Ab_Aeterno_transcript",
    },
    Object {
      "title": "The Package",
      "url": "http://lostpedia.wikia.com/wiki/The_Package_transcript",
    },
    Object {
      "title": "Happily Ever After",
      "url": "http://lostpedia.wikia.com/wiki/Happily_Ever_After_transcript",
    },
    Object {
      "title": "Everbody Loves Hugo",
      "url": "http://lostpedia.wikia.com/wiki/Everbody_Loves_Hugo_transcript",
    },
    Object {
      "title": "The Last Recruit",
      "url": "http://lostpedia.wikia.com/wiki/The_Last_Recruit_transcript",
    },
    Object {
      "title": "The Candidate",
      "url": "http://lostpedia.wikia.com/wiki/The_Candidate_transcript",
    },
    Object {
      "title": "Across the Sea",
      "url": "http://lostpedia.wikia.com/wiki/Across_the_Sea_transcript",
    },
    Object {
      "title": "What They Died For",
      "url": "http://lostpedia.wikia.com/wiki/What_They_Died_For_transcript",
    },
    Object {
      "title": "The End",
      "url": "http://lostpedia.wikia.com/wiki/The_End_transcript",
    },
  ],
]
`;

exports[`parseLine should parse h2 as act 1`] = `
Object {
  "type": "act",
}
`;

exports[`parseLine should parse hr as scene 1`] = `
Object {
  "type": "scene",
}
`;

exports[`parseLine should parse p 1`] = `
Object {
  "line": "Clanking noises are heard and Desmond has visual flashes of scenes from the original timeline: again he sees Charlie drowning; Penny smiling, kissing Penny,the birth of young Charlie; Charlie as a toddler; other scenes of kissing Penny. He also hears Penny's voice.",
  "raw": "[Clanking noises are heard and Desmond has visual flashes of scenes from the original timeline: again he sees Charlie drowning; Penny smiling, kissing Penny,the birth of young Charlie; Charlie as a toddler; other scenes of kissing Penny. He also hears Penny's voice.] Desmond.",
  "type": "stageDirection",
}
`;

exports[`parseLine should parse p 2`] = `
Object {
  "line": "Flashback - Shot of Locke's hand setting up a Mouse Trap game as an employee in a department store. A kid walks up.",
  "raw": "[Flashback - Shot of Locke's hand setting up a Mouse Trap game as an employee in a department store. A kid walks up.]",
  "type": "stageDirection",
}
`;

exports[`parseText should parse correctly 1`] = `
Object {
  "char_name": "SAYID",
  "directions": Array [],
  "line": "I know.",
}
`;

exports[`parseText should parse correctly 2`] = `
Object {
  "char_name": "SAWYER",
  "directions": Array [
    "reacting to Jack's fright",
  ],
  "line": "What?",
}
`;

exports[`parseText should parse correctly 3`] = `
Object {
  "char_name": "NURSE",
  "directions": Array [
    "Translation: Yea",
    "responding to Ayesha",
  ],
  "line": "آه",
}
`;

exports[`parseText should parse correctly 4`] = `
Object {
  "char_name": "JIN",
  "directions": Array [
    "Speaks korean",
  ],
  "line": "",
}
`;

exports[`parseText should parse correctly 5`] = `
Object {
  "char_name": "TOM",
  "directions": Array [],
  "line": "I didn't say you were going back to the Island. You're not going on that boat so you can swab decks, Michael.",
}
`;
